changed font and added added images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1> Messiano's Pizzeria</h1>
+    <section class="two-column">
+        <div class="image">
+            <img src="./Pizza Images/Screenshot 2025-07-31 at 9.14.27 am.png" alt="pizzeria kitchen">
+        </div>
 </body>
 </html>
