New changes to title page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Messiano's Pizzeria</title>
 </head>
 <body>
-    <h1> Messiano's Pizzeria</h1>
+    <section class="hero-image">
+        <h1 class="hero-text">
+            Messiano's Pizzeria
+        </h1>
+    <!-- two column design beginning -->
+    </section>
     <section class="two-column">
         <div class="image">
             <img src="./Pizza Images/Screenshot 2025-07-31 at 9.14.27 am.png" alt="pizzeria kitchen">
