--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
         <div class="image">
             <img src="./Pizza Images/Screenshot 2025-07-31 at 9.14.27 am.png" alt="pizzeria kitchen">
         </div>
+        <div class="info">
+            <h1>Welcome to the Pizzeria</h1>
+            <p>Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! You can either dine in, takeaway, or order and eat at home! We’ll deliver your meal fast and safe! 
+Give us a call or find us in our local stores!</p>
+        </div>
+    </section>
+    <!-- two column design ending -->
 </body>
 </html>
