Changes to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="info">
             <h1>Welcome to the Pizzeria</h1>
-            <p>Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! You can either dine in, takeaway, or order and eat at home! We’ll deliver your meal fast and safe! 
+            <p>Hello, welcome to Messiano’s Pizzeria! Here, you can find a range of Pizzas and various other Italian inspired dishes at our place! You can either dine in, takeaway, or order and eat at home! We’ll deliver your items fast and safe! 
 Give us a call or find us in our local stores!</p>
         </div>
     </section>
