Adjusts to the web

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@ Give us a call or find us in our local stores!</p>
         </div>
     </section>
     <!-- two column design ending -->
+     <section><button>Click Me</button></section>
 </body>
 </html>
