--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Messiano's Pizzeria</title>
 </head>
 <body>
-    <section class="hero-background">
+    <section class="hero-image">
         <h1 class="hero-text">
             Messiano's Pizzeria
         </h1>
