--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     <section class="two-column">
         <div class="image">
-            <img src="./Pizza Images/Screenshot 2025-07-31 at 9.14.27 am.png" alt="pizzeria kitchen">
+            <img src="./Pizza Images/istockphoto-986475100-612x612.jpg" alt="pizzeria kitchen">
         </div>
         <div class="info">
             <h1>Welcome to the Pizzeria</h1>
