New three column and hero text colour

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Messiano's Pizzeria</title>
+    <span class="outlined-text">
+        <title>Messiano's Pizzeria</title>
+    </span>
 </head>
 <body>
     <section class="hero-image">
@@ -24,6 +26,22 @@ Give us a call or find us in our local stores!</p>
         </div>
     </section>
     <!-- two column design ending -->
-     <section><button>Click Me</button></section>
+     <section class="three-column">
+        <div>
+            <button class="card">
+                Dine in
+            </button>
+        </div>
+        <div>
+            <button class="card">
+                Pick up
+            </button>
+        </div>
+        <div>
+            <button class="card">
+                Delivery
+            </button>
+        </div>
+    </section>
 </body>
 </html>
