changes to index.html + new menu.html

--- a/index.html
+++ b/index.html
@@ -28,19 +28,25 @@ Give us a call or find us in our local stores!</p>
     <!-- two column design ending -->
      <section class="three-column">
         <div>
-            <button class="card">
-                Dine in
-            </button>
+            <a href="menu.html">
+                <button class="card">
+                    Dine in
+                </button>
+            </a>
         </div>
         <div>
-            <button class="card">
-                Pick up
-            </button>
+            <a href="menu.html">
+                <button class="card">
+                    Pick up
+                </button>
+            </a>
         </div>
         <div>
-            <button class="card">
-                Delivery
-            </button>
+            <a href="menu.html">
+                <button class="card">
+                    Delivery
+                </button>
+            </a>
         </div>
     </section>
 </body>
