Implemented menu images along with other changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Messiano's Pizzeria</title>
+        <title>Messiano's Pizzeria - Title Page</title>
     </span>
 </head>
 <body>
@@ -28,21 +28,21 @@ Give us a call or find us in our local stores!</p>
     <!-- two column design ending -->
      <section class="three-column">
         <div>
-            <a href="menu.html">
+            <a href="menu.html" class="my-button">
                 <button class="card">
                     Dine in
                 </button>
             </a>
         </div>
         <div>
-            <a href="menu.html">
+            <a href="menu.html" class="my-button">
                 <button class="card">
                     Pick up
                 </button>
             </a>
         </div>
         <div>
-            <a href="menu.html">
+            <a href="menu.html" class="my-button">
                 <button class="card">
                     Delivery
                 </button>
