--- a/menu.html
+++ b/menu.html
@@ -3,28 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Messiano’s Pizzeria - Menu</title>
 </head>
 <body>
     <section class="three-column">
         <div>
+            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="haggis">
             <a href="menu.html">
                 <button class="card">
-                    Dine in
+                    Super Pepperoni
                 </button>
             </a>
         </div>
         <div>
+            <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="haggis">
             <a href="menu.html">
                 <button class="card">
-                    Pick up
+                    Dices of Ham
                 </button>
             </a>
         </div>
         <div>
+            <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="haggis">
             <a href="menu.html">
                 <button class="card">
-                    Delivery
+                    Cheesy Garlic
+                </button>
+            </a>
+        </div>
+    </section>
+    <section class="three-column">
+        <div>
+            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="haggis">
+            <a href="menu.html">
+                <button class="card">
+                    Neapolitan Margherita
+                </button>
+            </a>
+        </div>
+        <div>
+            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129.webp" alt="haggis">
+            <a href="menu.html">
+                <button class="card">
+                    Veggie Goodness
+                </button>
+            </a>
+        </div>
+        <div>
+            <img src="./Pizza Images/images (10).jpeg" alt="haggis">
+            <a href="menu.html">
+                <button class="card">
+                    Ocean of Seafood
+                </button>
+            </a>
+        </div>
+    </section>
+    <section class="three-column">
+        <div>
+            <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="haggis">
+            <a href="menu.html">
+                <button class="card">
+                    The Supreme
                 </button>
             </a>
         </div>
