--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ Give us a call or find us in our local stores!</p>
             </a>
         </div>
         <div>
-            <a href="menu.html" class="my-button">
+            <a href="menu.html" class="my-button-2">
                 <button class="card">
                     Pick up
                 </button>
             </a>
         </div>
         <div>
-            <a href="menu.html" class="my-button">
+            <a href="menu.html" class="my-button-3">
                 <button class="card">
                     Delivery
                 </button>
