--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section class="two-column">
         <div class="image">
-            <img src="./Pizza Images/istockphoto-986475100-612x612.jpg" alt="pizzeria kitchen">
+            <img src="./Pizza Images/Screenshot 2025-08-12 at 1.56.47 pm.png" alt="pizzeria kitchen">
         </div>
         <div class="info">
             <h1>Welcome to the Pizzeria</h1>
