Minor edits to image sizes

--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
     </span>
 </head>
 <body>
-    <section class="hero-image">
+    <section class="hero-image" alt="pizzeria kitchen">
         <h1 class="hero-text">
-            ────
-            Messiano's Pizzeria
-            ────
+            ──── Messiano's Pizzeria ────
         </h1>
     <!-- two column design beginning -->
     </section>
     <section class="two-column">
         <div class="image">
-            <img src="./Pizza Images/istockphoto-986475100-612x612.jpg" alt="pizzeria kitchen">
+            <img class="secondary-image" src="./Pizza Images/istockphoto-986475100-612x612.jpg" alt="Italian greeting">
         </div>
         <div class="info">
             <h1>Welcome to the Pizzeria</h1>
