changed image size alignment

--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
     <section class="three-column">
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="haggis">
+            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
             <a href="menu.html">
                 <button class="card">
                     Super Pepperoni
@@ -17,7 +17,7 @@
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="haggis">
+            <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="Ham and Cheese">
             <a href="menu.html">
                 <button class="card">
                     Dices of Ham
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="haggis">
+            <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheesy Garlic">
             <a href="menu.html">
                 <button class="card">
                     Cheesy Garlic
@@ -35,7 +35,7 @@
     </section>
     <section class="three-column">
         <div>
-            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="haggis">
+            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
             <a href="menu.html">
                 <button class="card">
                     Neapolitan Margherita
@@ -43,7 +43,7 @@
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129.webp" alt="haggis">
+            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129.webp" alt="Veggie">
             <a href="menu.html">
                 <button class="card">
                     Veggie Goodness
@@ -51,7 +51,7 @@
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/images (10).jpeg" alt="haggis">
+            <img src="./Pizza Images/images (10).jpeg" alt="Seafood">
             <a href="menu.html">
                 <button class="card">
                     Ocean of Seafood
@@ -61,7 +61,7 @@
     </section>
     <section class="three-column">
         <div>
-            <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="haggis">
+            <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
             <a href="menu.html">
                 <button class="card">
                     The Supreme
