Changed menu heading

--- a/menu.html
+++ b/menu.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Messiano’s Pizzeria - Menu</title>
+    <span class="outlined-text">
+        <title>Messiano’s Pizzeria - Menu</title>
+    </span>
 </head>
 <body>
+    <section class="hero-background">
+        <h1 class="hero-text">
+            Food Menu
+        </h1>
+    </section>
+    <!-- three column design beginning -->
     <section class="three-column">
         <div>
             <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
@@ -32,7 +40,9 @@
                 </button>
             </a>
         </div>
+    <!-- three column design end -->
     </section>
+    <!-- three column design beginning -->
     <section class="three-column">
         <div>
             <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
@@ -58,7 +68,9 @@
                 </button>
             </a>
         </div>
+    <!-- three column design end -->
     </section>
+    <!-- three column design beginning -->
     <section class="three-column">
         <div>
             <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
@@ -69,6 +81,7 @@
             </a>
         </div>
     </section>
+    <!-- three column design end -->
     <section>
         <a href="index.html">
             <button class="card">
