Edited veggie pizza image

--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129.webp" alt="Veggie">
+            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
             <a href="menu.html">
                 <button class="card">
                     Veggie Goodness
