--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,18 @@
             Food Menu
         </h1>
     </section>
+    <section>
+        <a href="index.html">
+            <button class="card">
+                Exit page
+            </button>
+        </a>
+    </section>
+    <section>
+        <h2 class="sub-heading">
+            Pizza
+        </h2>
+    </section>
     <!-- three column design beginning -->
     <section class="three-column">
         <div>
@@ -82,12 +94,77 @@
         </div>
     </section>
     <!-- three column design end -->
-    <section>
-        <a href="index.html">
-            <button class="card">
-                Exit page
-            </button>
-        </a>
+        <h2 class="sub-heading">
+            Pasta
+        </h2>
     </section>
+    <!-- three column design beginning -->
+    <section class="three-column">
+        <div>
+            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <a href="menu.html">
+                <button class="card">
+                    Super Pepperoni
+                </button>
+            </a>
+        </div>
+        <div>
+            <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="Ham and Cheese">
+            <a href="menu.html">
+                <button class="card">
+                    Dices of Ham
+                </button>
+            </a>
+        </div>
+        <div>
+            <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheesy Garlic">
+            <a href="menu.html">
+                <button class="card">
+                    Cheesy Garlic
+                </button>
+            </a>
+        </div>
+    <!-- three column design end -->
+    </section>
+    <!-- three column design beginning -->
+    <section class="three-column">
+        <div>
+            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
+            <a href="menu.html">
+                <button class="card">
+                    Neapolitan Margherita
+                </button>
+            </a>
+        </div>
+        <div>
+            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
+            <a href="menu.html">
+                <button class="card">
+                    Veggie Goodness
+                </button>
+            </a>
+        </div>
+        <div>
+            <img src="./Pizza Images/images (10).jpeg" alt="Seafood">
+            <a href="menu.html">
+                <button class="card">
+                    Ocean of Seafood
+                </button>
+            </a>
+        </div>
+    <!-- three column design end -->
+    </section>
+    <!-- three column design beginning -->
+    <section class="three-column">
+        <div>
+            <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
+            <a href="menu.html">
+                <button class="card">
+                    The Supreme
+                </button>
+            </a>
+        </div>
+    </section>
+    <!-- three column design end -->
 </body>
 </html>
