About us button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@ Give us a call or find us in our local stores!</p>
                 </button>
             </a>
         </div>
+        <div>
+            <a href="menu.html" class="my-button-4">
+                <button class="card">
+                    Delivery
+                </button>
+            </a>
+        </div>
     </section>
 </body>
 </html>
