About us button named

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Give us a call or find us in our local stores!</p>
         <div>
             <a href="menu.html" class="my-button-4">
                 <button class="card">
-                    Delivery
+                    About Us
                 </button>
             </a>
         </div>
