--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Give us a call or find us in our local stores!</p>
             </a>
         </div>
         <div>
-            <a href="menu.html" class="my-button-4">
+            <a href="aboutus.html" class="my-button-4">
                 <button class="card">
                     About Us
                 </button>
