--- a/aboutus.html
+++ b/aboutus.html
@@ -11,5 +11,12 @@
 Before our shop opened back in 2025, our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic), and we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
 Out team had been wanting to give customers the feel of traditional Italian Pizzas. Therefore, our Pizzas are cooked in a traditional pizza oven to give a smoky flavour to our pizzas, prepared by Italian chefs, and are made according to the Italian traditions and rules. We made sure to respect Italians by avoid cutting Pasta and omit directly putting overly non-traditional ingredients, including chicken and pineapple, onto our Italian main dishes. If you would like food such as those, we have offered side dishes for you to enjoy them to cater your preferences. 
 </p>
+    <section>
+        <a href="index.html">
+            <button class="card">
+                Exit page
+            </button>
+        </a>
+    </section>
 </body>
 </html>
