New sticky header and footer and other minor changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,49 @@
     </span>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <button class="card">
+                Home
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Menu
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Deals
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Allergen
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Blog
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Stores
+            </button>
+        </a>
+        <a href="aboutus.html">
+            <button class="card">
+                About
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Account
+            </button>
+        </a>
+    </header>
+
     <section class="hero-image" alt="pizzeria kitchen">
         <h1 class="hero-text">
             ──── Messiano's Pizzeria ────
@@ -26,7 +69,13 @@ Give us a call or find us in our local stores!</p>
         </div>
     </section>
     <!-- two column design ending -->
-     <section class="three-column">
+    <!-- three column design beginning -->
+    <section class="heading-section">
+        <h1>
+            ──── Order Now By ────
+        </h1>
+    </section>
+    <section class="three-column";>
         <div>
             <a href="menu.html" class="my-button">
                 <button class="card">
@@ -48,13 +97,20 @@ Give us a call or find us in our local stores!</p>
                 </button>
             </a>
         </div>
-        <div>
-            <a href="aboutus.html" class="my-button-4">
-                <button class="card">
-                    About Us
-                </button>
-            </a>
-        </div>
-    </section>
+     </section>
+<!-- three column design ending -->
+
+    <footer>
+        <a href="menu.html">
+            <button class="card">
+                Help
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Contact
+            </button>
+        </a>
+    </footer>
 </body>
 </html>
