--- a/menu.html
+++ b/menu.html
@@ -9,25 +9,61 @@
     </span>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <button class="card">
+                Home
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Menu
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Deals
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Allergen
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Blog
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Stores
+            </button>
+        </a>
+        <a href="aboutus.html">
+            <button class="card">
+                About
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Account
+            </button>
+        </a>
+    </header>
+
     <section class="hero-background">
-        <h1 class="hero-text">
+        <h1 class="hero-text-menu">
             Food Menu
         </h1>
     </section>
-    <section>
-        <a href="index.html">
-            <button class="card">
-                Exit page
-            </button>
-        </a>
-    </section>
-    <section>
-        <h2 class="sub-heading">
+    <section class="heading-section">
+        <h2 class="heading-text">
             Pizza
         </h2>
     </section>
     <!-- three column design beginning -->
-    <section class="three-column">
+    <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
             <a href="menu.html">
@@ -55,7 +91,7 @@
     <!-- three column design end -->
     </section>
     <!-- three column design beginning -->
-    <section class="three-column">
+    <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
             <a href="menu.html">
@@ -83,7 +119,7 @@
     <!-- three column design end -->
     </section>
     <!-- three column design beginning -->
-    <section class="three-column">
+    <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
             <a href="menu.html">
@@ -94,12 +130,13 @@
         </div>
     </section>
     <!-- three column design end -->
-        <h2 class="sub-heading">
+    <section class="heading-section">
+        <h2 class="heading-text">
             Pasta
         </h2>
     </section>
     <!-- three column design beginning -->
-    <section class="three-column">
+    <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/images (11).jpeg" alt="Pepperoni">
             <a href="menu.html">
@@ -126,5 +163,18 @@
         </div>
     <!-- three column design end -->
     </section>
+
+    <footer>
+        <a href="menu.html">
+            <button class="card">
+                Help
+            </button>
+        </a>
+        <a href="menu.html">
+            <button class="card">
+                Contact
+            </button>
+        </a>
+    </footer>
 </body>
 </html>
