New Stores Page and other minor changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Blog
             </button>
         </a>
-        <a href="menu.html">
+        <a href="stores.html">
             <button class="card">
                 Stores
             </button>
