--- a/stores.html
+++ b/stores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Messiano’s Pizzeria - Menu</title>
+        <title>Messiano’s Pizzeria - Stores</title>
     </span>
 </head>
 <body>
@@ -52,9 +52,9 @@
         </a>
     </header>
 
-    <section class="hero-background">
+    <section class="hero-background-stores">
         <h1 class="hero-text-menu">
-            Food Menu
+            Stores
         </h1>
     </section>
     <section class="heading-section">
@@ -65,26 +65,26 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    Super Pepperoni
+                    Burnside
                 </button>
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="Ham and Cheese">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    Dices of Ham
+                    Bishopdale
                 </button>
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheesy Garlic">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    Cheesy Garlic
+                    Ilam
                 </button>
             </a>
         </div>
@@ -93,26 +93,26 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    Neapolitan Margherita
+                    Papanui
                 </button>
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    Veggie Goodness
+                    Riccarton
                 </button>
             </a>
         </div>
         <div>
-            <img src="./Pizza Images/images (10).jpeg" alt="Seafood">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    Ocean of Seafood
+                    Fendalton
                 </button>
             </a>
         </div>
@@ -121,47 +121,13 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
+            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
             <a href="menu.html">
                 <button class="card">
-                    The Supreme
+                    Christchurch City Centre
                 </button>
             </a>
         </div>
-    </section>
-    <!-- three column design end -->
-    <section class="heading-section">
-        <h2 class="heading-text">
-            Pasta
-        </h2>
-    </section>
-    <!-- three column design beginning -->
-    <section class="three-column-menu">
-        <div>
-            <img src="./Pizza Images/images (11).jpeg" alt="Pepperoni">
-            <a href="menu.html">
-                <button class="card">
-                    Spaghetti
-                </button>
-            </a>
-        </div>
-        <div>
-            <img src="./Pizza Images/images (12).jpeg" alt="Ham and Cheese">
-            <a href="menu.html">
-                <button class="card">
-                    Macaroni
-                </button>
-            </a>
-        </div>
-        <div>
-            <img src="./Pizza Images/images (13).jpeg" alt="Cheesy Garlic">
-            <a href="menu.html">
-                <button class="card">
-                    Fusilli
-                </button>
-            </a>
-        </div>
-    <!-- three column design end -->
     </section>
 
     <footer>
